--- a/TeoriaDeLaInformacion/nbproject/project.properties
+++ b/TeoriaDeLaInformacion/nbproject/project.properties
@@ -29,9 +29,11 @@ dist.jar=${dist.dir}/TeoriaDeLaInformacion.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.jgraphx.jar=jgraphx.jar
 includes=**
-jar.compress=false
-javac.classpath=
+jar.compress=true
+javac.classpath=\
+    ${file.reference.jgraphx.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -42,7 +44,9 @@ javac.source=1.8
 javac.target=1.8
 javac.test.classpath=\
     ${javac.classpath}:\
-    ${build.classes.dir}
+    ${build.classes.dir}:\
+    ${libs.junit_4.classpath}:\
+    ${libs.hamcrest.classpath}
 javac.test.processorpath=\
     ${javac.test.classpath}
 javadoc.additionalparam=
